Fix text overlap in surface2 for screens <400px

--- a/public/PsycheJR/CSS/surface2.css
+++ b/public/PsycheJR/CSS/surface2.css
@@ -39,8 +39,8 @@ File Start
 }
 
 body {
-    margin: 0;
-    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 2560px;
 }
 
@@ -355,6 +355,31 @@ footer {
     }
 }
 
+@media (max-width: 400px) {
+    p, 
+    #materials-p,
+    #features-p,
+    #dimensions-p,
+    .comparable-p,
+    #explore-p {
+        transform: none !important;
+        scale: 1 !important;
+        translate: none !important;
+        y: 0 !important;
+        margin-top: 0 !important;
+        padding-bottom: 0 !important;
+        font-size: 1rem !important;
+    }
+
+    #h4-1, #h4-2 {
+        margin-top: 0 !important;
+    }
+
+    #psyche-container {
+        margin-top: 0 !important;
+    }
+}
+
 @media (min-width: 400px) and (max-width: 700px) {
     #explore h1{
         padding-bottom: 1.5rem;
@@ -628,5 +653,15 @@ footer {
         padding-top: 3rem !important;
     }
     
+    footer {
+        margin-top: 50rem;
+    }
 }
 
+/* Fix for very small phones */
+@media (max-width: 375px) {
+    #materials-p {
+      transform: scale(1) !important;
+      transform-origin: center center;
+    }
+  }
